# unpack

./: .gitignore  .gitmodules  Agents.md  CLAUDE.MD  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  profile.json  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: codspeed.yml  opencode.yml  summary.yml
benchmark/build-tools-performance/: package.json
benchmark/build-tools-performance/src/medium/: f0.jsx  f1.jsx  f2.jsx  f3.jsx  f4.jsx  f5.jsx  f6.jsx  f7.jsx  index.jsx
benchmark/build-tools-performance/src/medium/d0/: f0.jsx  f1.jsx  f2.jsx  f3.jsx
benchmark/build-tools-performance/src/medium/d1/: f0.jsx  f1.jsx  f2.jsx  f3.jsx
benchmark/build-tools-performance/src/medium/d2/: f0.jsx  f1.jsx  f2.jsx  f3.jsx
benchmark/build-tools-performance/src/medium/d3/: f0.jsx  f1.jsx  f2.jsx  f3.jsx
benchmark/build-tools-performance/src/medium/d4/: f0.jsx  f1.jsx  f2.jsx  f3.jsx
benchmark/build-tools-performance/src/small/: f0.jsx  f1.jsx  f2.jsx  f3.jsx  f4.jsx  index.html  index.jsx
book/: index.md  index.zh-CN.md
crates/node_binding/: Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
crates/node_binding/npm/darwin-x64/: README.md  package.json
crates/node_binding/npm/linux-x64-gnu/: README.md  package.json
crates/node_binding/npm/win32-x64-msvc/: README.md  package.json
crates/node_binding/src/: js_compilation.rs  js_compiler.rs  js_plugin.rs  lib.rs
crates/node_binding/tests/: basic.test.mjs  bench.js  build.js
crates/node_binding/tests/fixtures/src/: index.mjs
crates/turbo_build/: Cargo.toml
crates/turbo_build/fixtures/: c  input
crates/turbo_build/src/: asset_content.rs  file_source.rs  ident.rs  lib.rs  main.rs  module.rs  reference.rs  source.rs
crates/turbo_build/src/chunk/: browser_context.rs  chunk.rs  chunk_context.rs  chunk_group.rs  chunk_group_info.rs  chunk_item.rs  chunk_reference.rs  mod.rs
crates/turbo_build/src/module_graph/: mod.rs
crates/turbo_build/src/reference/: mod.rs
crates/unpack/: Cargo.toml
crates/unpack/examples/: basic.rs  bench.rs
crates/unpack/examples/fixtures/: index.mjs
crates/unpack/examples/fixtures/dist1/: other.js
crates/unpack/examples/fixtures/src/: index.mjs  other.mjs
crates/unpack/src/: build_chunk_graph.rs  bundler.rs  chunk.rs  compilation.rs  compiler.rs  dependency.rs  errors.rs  lib.rs  module.rs  module_graph.rs  module_scanner.rs  normal_module_factory.rs  plugin.rs  resolver.rs  resolver_factory.rs  scheduler.rs  task.rs  task_queue.rs  vc.rs
crates/unpack/src/chunk/: chunk_graph.rs  chunk_graph_chunk.rs  chunk_graph_module.rs  chunk_group.rs  chunk_group_id.rs  chunk_id.rs  chunk_linker.rs  chunk_node.rs
crates/unpack/src/compiler/: options.rs
crates/unpack/src/dependency/: const_dependency.rs  depencency_collector.rs  dependency_block.rs  dependency_id.rs  dependency_template.rs  entry_dependency.rs  esm_import_side_effect_dependency.rs  harmony_import_side_effect_dependency.rs  module_dependency.rs  swc_span_ext.rs
crates/unpack/src/dependency/init_fragments/: mod.rs
crates/unpack/src/module/: ast.rs  ast2.rs  connection.rs  module_graph.rs  module_graph_module.rs  module_id.rs  module_node.rs  module_scanner.rs  normal_module.rs
crates/unpack/src/module/module_graph/: dependency.rs  module_graph_connection.rs  module_graph_module.rs
crates/unpack/src/runtime/: mod.rs
crates/unpack/src/task/: add.rs  build.rs  factorize.rs  process_dependencies.rs  task_queue.rs
crates/unpack/src/tracing/: mod.rs
crates/unpack/src/utils/: mod.rs  path.rs
crates/unpack_core/: Cargo.toml  README.md
crates/unpack_core/benches/: module_graph_bench.rs
crates/unpack_core/examples/: basic.rs  bench.rs  bench2.rs
crates/unpack_core/examples/fixtures/basic/src/: index.mjs  lib.mjs  lib2.mjs  other.mjs
crates/unpack_core/src/: chunk.rs  compilation.rs  compiler.rs  dependency.rs  errors.rs  lib.rs  normal_module_factory.rs  plugin.rs  scheduler.rs  task.rs
crates/unpack_core/src/chunk/: chunk_graph_module.rs  chunk_linker.rs  chunk_node.rs
crates/unpack_core/src/compiler/: options.rs
crates/unpack_core/src/dependency/: const_dependency.rs  depencency_collector.rs  dependency_block.rs  dependency_id.rs  dependency_range.rs  dependency_template.rs  entry_dependency.rs  esm_export_specifier_dependency.rs  esm_import_side_effect_dependency.rs  module_dependency.rs  swc_span_ext.rs
crates/unpack_core/src/memory_manager/: arena.rs  cell.rs  intern.rs  mod.rs
crates/unpack_core/src/module/: ast.rs  connection.rs  module_graph.rs  module_graph_module.rs  module_node.rs  module_scanner.rs  normal_module.rs
crates/unpack_core/src/module/module_graph/: connection.rs  module.rs  module_graph_module.rs
crates/unpack_core/src/task/: add.rs  build.rs  factorize.rs  process_dependencies.rs
crates/unpack_core/src/tracing/: mod.rs
crates/unpack_core/src/utils/: ext.rs  path.rs
crates/unpack_ng/: Cargo.toml
crates/unpack_ng/examples/: basic.rs
crates/unpack_ng/src/: compiler.rs  lib.rs
crates/unpack_ng/src/db/: file.rs  mod.rs  module.rs
crates/unpack_salsa/: Cargo.toml  README.md
crates/unpack_salsa/examples/: basic.rs
crates/unpack_salsa/examples/fixtures/simple/: index.js
crates/unpack_salsa/src/: lib.rs
crates/unpack_salsa/src/db/: mod.rs
crates/unpack_tasks/: Cargo.toml
crates/unpack_tasks/src/: main.rs
crates/unpack_turbo/: Cargo.toml  README.md
crates/unpack_turbo/src/: asset.rs  asset_content.rs  file_source.rs  main.rs  module.rs  output.rs
crates/unpack_turbo/src/chunk/: availability_info.rs  browser_context.rs  chunk_context.rs  chunk_item.rs
crates/unpack_turbo/src/module_graph/: mod.rs
crates/unpack_turbo/src/reference/: mod.rs
docs/architecture/: index.md  index.zh-CN.md
ng/unpack_ng/: Cargo.toml
ng/unpack_ng/src/: lib.rs  main.rs
ng/unpack_ng_cli/: Cargo.toml
ng/unpack_ng_cli/fixtures/: index.js
ng/unpack_ng_cli/src/: arguments.rs  builder.rs  lib.rs  main.rs  resolve.rs
ng/unpack_ng_cli/src/resolve/: pattern.rs
(+6469 files in other folders)
