[workspace]
resolver = "2"
members = [
    "crates/*"
]
[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/hardfist/unpack"

[workspace.dependencies]
unpack = { path = "./crates/unpack"}
derive-new = { version = "0.6.0"}
index_vec = { version = "0.1.3"}
camino = { version = "1.1.9"}
miette = { version = "7.2.0"}
rspack_resolver = { version = "0.2.0"}
dyn-clone = { version = "1.0.17"}
downcast-rs = { version = "1.2.1"}
dashmap = { version = "6.0.1"}
thiserror = { version = "1.0.63"}
rspack_sources = { version = "0.3.0"}
swc_core = { version = "0.106.4", features = ["__parser"]}
rustc-hash = { version = "2.0.0"}