[workspace]
resolver = "2"
members = [
    "crates/*"
]
[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/hardfist/unpack"

[workspace.dependencies]
unpack = { path = "./crates/unpack"}
derive-new = { version = "0.6.0"}
index_vec = { version = "0.1.3"}
camino = { version = "1.1.9"}
miette = { version = "7.2.0"}
rspack_resolver = { version = "0.2.0"}
dyn-clone = { version = "1.0.17"}
downcast-rs = { version = "1.2.1"}
dashmap = { version = "6.0.1"}
thiserror = { version = "1.0.63"}
rspack_sources = { version = "0.4.8"}
swc_core = { version = "0.106.4", features = ["__parser", "__visit","common"]}
rustc-hash = { version = "2.0.0"}
indexmap = { version = "2.6.0"}
rayon = { version = "1.10.0"}
mimalloc = { version = "0.1.43"}
crossbeam-channel = { version = "*"}
async-std = { version = "1.13.0"}
serde = { version = "1.0.219"}
serde_json = { version = "1.0.140"}
tokio = { version = "*", features = ["full"] }
turbo-tasks = { git = "https://github.com/hardfist/next.js", package = "turbo-tasks", branch = "canary" }
turbo-tasks-fs = { git = "https://github.com/hardfist/next.js", package = "turbo-tasks-fs", branch = "canary" }
turbo-tasks-backend = { git = "https://github.com/hardfist/next.js", package = "turbo-tasks-backend", branch = "canary" }
turbo-tasks-build = { git = "https://github.com/hardfist/next.js", package = "turbo-tasks-build", branch = "canary" }
turbo-rcstr = { git = "https://github.com/hardfist/next.js", package = "turbo-rcstr", branch = "canary" }
salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "3713cd7eb30821c0c086591832dd6f59f2af7fe7", features = [
    "compact_str",
    "macros",
    "salsa_unstable",
    "inventory",
    "accumulator"
] }
salsa-macros = { git = "https://github.com/salsa-rs/salsa.git", rev = "3713cd7eb30821c0c086591832dd6f59f2af7fe7"}
[profile.release]
codegen-units = 1
debug         = true
# Performs “thin” LTO. This is similar to “fat”, but takes substantially less time to run while still achieving performance gains similar to “fat”.
lto       = "thin"
opt-level = 3
panic     = "abort"
strip     = false
[profile.release-debug]
debug    = true
inherits = "release"
strip    = false

