[package]
edition = "2021"
name = "unpack_node_binding"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.16", features = ["anyhow", "napi4", "tokio_rt"] }
napi-derive = "2.16.13"
unpack = { path = "../unpack"}
camino = { workspace = true }
async-trait = { version = "0.1.83" }
pollster = { version = "0.4.0"}
[build-dependencies]
napi-build = "2.1.4"

[profile.release]
lto = true
strip = "symbols"
