[package]
name = "turbo_build"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

turbo-tasks = { workspace = true}
turbo-tasks-fs = { workspace = true }
turbo-tasks-backend= { workspace = true }
anyhow = { workspace = true}
tokio = { workspace = true}

