[package]
name = "turbo_build"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

turbo-tasks = { workspace = true}
turbo-tasks-fs = { workspace = true }
turbo-tasks-backend= { workspace = true }
turbo-rcstr = { workspace = true}
anyhow = { workspace = true}
tokio = { workspace = true}
petgraph ={ workspace = true, features = ["serde-1"] }
rustc-hash = { workspace = true }
serde = { workspace = true , features = ["derive"] }
roaring = { workspace = true, features = ["serde"] }
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(rust_analyzer)'
] }
