[package]
name = "unpack"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = { workspace = true }
derive-new = { workspace = true }
index_vec = { workspace = true }
indexmap = { workspace = true }
camino = { workspace = true }
rspack_resolver = { workspace = true }
miette = { workspace = true, features = ["fancy"]}
dyn-clone = { workspace = true }
downcast-rs = { workspace = true }
dashmap = { workspace = true }
mimalloc = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
rspack_sources = { workspace = true }
rayon = { workspace = true }
swc_core = { workspace = true, features = ["__parser", "common","__utils", "base", "ecma_quote"]}
oxc_allocator = { version = "0.31.0"}
oxc_ast = { version = "0.31.0"}
oxc_parser = { version = "0.31.0"}
oxc_span = { version = "0.31.0"}