[package]
name = "unpack_core"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-new = { workspace = true }
index_vec = { workspace = true }
indexmap = { workspace = true }
camino = { workspace = true }
rspack_resolver = { workspace = true }
miette = { workspace = true, features = ["fancy"]}
dyn-clone = { workspace = true }
downcast-rs = { workspace = true }
dashmap = { workspace = true }
mimalloc = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
rspack_sources = { workspace = true }
rayon = { workspace = true }
swc_core = { workspace = true, features = ["__parser", "common","__utils", "base", "ecma_quote"]}
tokio = { version = "1.41.0", features = ["full"]}
async-trait = { version = "0.1.83" }
serde = { workspace = true }
serde_json = { workspace = true }
console-subscriber = { version = "0.4.0" }
tracing-subscriber = { version = "0.3.19"}
tracing-chrome = { version = "0.7.2"}
tracing = { version = "0.1.41"}
bitflags = { version = "2.9.0" }