[package]
name = "unpack_salsa"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
salsa = { workspace = true}
notify-debouncer-mini = "0.4.1"
crossbeam-channel = "0.5.15"
anyhow = "1.0.100"
dashmap = "6.1.0"
rspack_resolver = { workspace = true }
swc_core = { workspace = true,features = ["__parser", "__visit","common", "ecma_ast","common_concurrent"]}

miette = { workspace = true }