[package]
name = "unpack_ng"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
turbo-tasks = { workspace = true}
turbo-tasks-backend= { workspace = true }

tokio = { workspace = true}

[build-dependencies]
turbo-tasks-build= { workspace = true }

[[bin]]
name = "unpack_ng"
path = "src/main.rs"