[package]
name = "unpack_ng_cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
turbo-tasks = { workspace = true}
turbo-tasks-backend= { workspace = true }
turbo-rcstr = { workspace = true }
turbo-tasks-fs = { workspace = true }
tokio = { workspace = true}
regex = "1.11.1"
rustc-hash.workspace = true
serde.workspace = true
tracing = "0.1.41"
clap = { version = "4.5.2", features = ["derive", "env"] }

[build-dependencies]
turbo-tasks-build= { workspace = true }

[[bin]]
name = "unpack_ng"
path = "src/main.rs"
